# model-sentinel

./: .gitignore  .markdownlint.jsonc  CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/specs/: metadata_v1.md
samples/: demo_hf.py  demo_local.py
scripts/: bump_version.py  generate_changelog.py  inference_from_hub.py
src/model_sentinel/: __init__.py  cli.py  gui.py  model_sentinel.py
src/model_sentinel/directory/: __init__.py  manager.py
src/model_sentinel/gui/: __init__.py  components.py  gui.py  handlers.py  main.py  utils.py  verification.py
src/model_sentinel/storage/: __init__.py  manager.py
src/model_sentinel/verify/: errors.py  metadata.py  session.py  storage.py  verify.py
src/remote_code_checker/: __init__.py
src/remote_code_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  test_cli.py
tests/data/sample_configs/: test_config.json  test_verified_hashes.json
tests/data/sample_model/: test_file.py
tests/test_directory/: __init__.py  test_manager.py
tests/test_gui/: test_gui.py  test_main.py
tests/test_storage/: __init__.py  test_manager.py
tests/test_target/: __init__.py  test_base.py  test_hf.py  test_local.py
tests/test_verify/: __init__.py  test_metadata.py  test_storage.py  test_verify.py
