[project]
name = "model-sentinel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ryo Moriwaki", email = "ryomo@duck.com" }
]
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.33.0",
    "platformdirs>=4.3.8",
]

[project.scripts]
model-sentinel = "model_sentinel:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
