[project]
name = "model-sentinel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ryo Moriwaki", email = "ryomo@duck.com" }
]
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.33.0",
    "platformdirs>=4.3.8",
]

[project.scripts]
model-sentinel = "model_sentinel.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
gui = [
    "gradio>=5.37.0",
]

[dependency-groups]
dev = [
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "gradio>=5.37.0",
    "coverage>=7.9.2",
]
